[package]
name = "rsauth_server"
version = "0.1.0"
authors = ["Dan Skorupski <boardwalk@ersatsz.com>"]

[dependencies]
base32 = "*"
byteorder = "*"
futures = "0.1.*"
hyper = "*"
libc = "*"
rsauth_common = { path = "../rsauth_common" }
serde = "*"
serde_derive = "*"
serde_json = "*"
sodiumoxide = "*"