[package]
name = "rsauth_server"
version = "0.1.0"
authors = ["Dan Skorupski <boardwalk@ersatsz.com>"]
edition = "2018"

[dependencies]
base64 = "0.11"
byteorder = "1.3"
futures = "0.3"
hyper = "0.13"
libc = "0.2"
rsauth_common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "macros"] }
